--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-{"statusCode":300,"footglao":"https://77brl.com?ch=imm1z&sdmode=3"}
+{"statusCode":300,"footgloa":"https://77brl.com?ch=imm1z&sdmode=3"}
