--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-{"statusCode":300,"cardwar":"https://77brl.com?ch=imm1z&sdmode=3"}
+{"statusCode":200,"cardwar":"https://ged77.com?ch=p2ik9&sdmode=3"}
